--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "flight_delay_dashboard",
   "version": "0.1.0",
   "private": true,
+  "author": "AllenAnthes",
   "dependencies": {
     "antd": "^3.4.0",
     "pigeon-maps": "^0.9.2",
